--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <p id="instructions">Memorizza i numeri entro il tempo limite!</p>
 
       <!-- Numbers -->
-      <ul id="numbers-list" class="d-flex gap-5 list-unstyled"></ul>
+      <ul id="numbers-list" class="d-flex gap-5 list-unstyled">
+        <li></li>
+      </ul>
 
       <!-- Form -->
       <form id="answers-form" class="d-none">
